# poker-coach

./: .env.example  .gitignore  README.md  pipeline_rules.md  pyproject.toml  run.py
data/: scenarios-annotated.json  scenarios.json
prompts/: v0.txt
scripts/: run_coding_pipeline.py  run_failure_detector.py  run_failure_detector_e2e.py
src/: coaching_agent.py  config.py  engine_dspy.py  engine_manual.py  engine_protocol.py  evaluator.py  failure_detector.py  generate_data.py  judge_agent.py  llm.py  models.py  optimizer_agent.py  pipeline.py  prompt_store.py
src/coding_pipeline/: __init__.py  core.py
src/coding_pipeline/providers/: __init__.py  claude.py  codex.py
tests/: conftest.py  test_coaching_agent.py  test_engine_dspy.py  test_engine_manual.py  test_evaluator.py  test_evaluator_soft.py  test_failure_detector.py  test_judge_agent.py  test_models.py  test_optimizer_agent.py  test_pipeline.py  test_prompt_store.py  test_validate_scenario.py
