[project]
name = "poker-coach-poc"
version = "0.1.0"
description = "Self-optimizing poker coaching POC"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
